--- a/src/config.json
+++ b/src/config.json
@@ -1,14 +1,14 @@
 {
-    "app_id": "com.moodle.moodlemobile",
-    "appname": "Moodle Mobile",
-    "desktopappname": "Moodle Desktop",
+    "app_id": "com.moodle.butmoodlelms",
+    "appname": "BUT-LMS",
+    "desktopappname": "LMS app for Birjand University of Thecnology",
     "versioncode": 3920,
     "versionname": "3.9.2",
     "cache_update_frequency_usually": 420000,
     "cache_update_frequency_often": 1200000,
     "cache_update_frequency_sometimes": 3600000,
     "cache_update_frequency_rarely": 43200000,
-    "default_lang": "en",
+    "default_lang": "fa",
     "languages": {
         "ar": "عربي",
         "bg": "Български",
@@ -60,25 +60,13 @@
     },
     "wsservice": "moodle_mobile_app",
     "wsextservice": "local_mobile",
-    "demo_sites": {
-        "student": {
-            "url": "https:\/\/school.moodledemo.net",
-            "username": "student",
-            "password": "moodle"
-        },
-        "teacher": {
-            "url": "https:\/\/school.moodledemo.net",
-            "username": "teacher",
-            "password": "moodle"
-        }
-    },
     "font_sizes": [
         62.5,
         75.89,
         93.75
     ],
     "customurlscheme": "moodlemobile",
-    "siteurl": "",
+    "siteurl": "http:\/\/lms.birjandut.ac.ir/",
     "sitename": "",
     "multisitesdisplay": "",
     "onlyallowlistedsites": false,
